<?xml version="1.0" encoding="utf-8"?>
<!-- Relative layout as parent layout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <!-- Linear layout to contain all the
        editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="username"
            android:background="@drawable/background_edit_text"
            android:hint="@string/editTextUsername"
            android:inputType="text"
            android:padding="12dp"
            android:singleLine="true"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:clickable="true"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:padding="12dp"
            android:singleLine="true"
            android:autofillHints="password"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- material button is used to display the "Login" button to user-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/purple"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="8dp"
        android:background="#e2e2e2" />

    <!-- text view to show the message
        "Don't have an account? Sign up-->
    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/purple"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout>
