<?xml version="1.0" encoding="utf-8"?>
<!-- Relative layout as parent layout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <!-- Linear layout to contain all the
        editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:windowSoftInputMode="adjustResize"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Sign Up to Weight Wise"
            android:textColor="#000000"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/background_edit_text"
            android:hint="@string/editTextUsername"
            android:inputType="text"
            android:padding="12dp"
            android:singleLine="true"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:clickable="true"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:padding="12dp"
            android:singleLine="true"
            android:autofillHints="password"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:clickable="true"
            android:hint="@string/editTextConfirmPassword"
            android:inputType="textPassword"
            android:padding="12dp"
            android:singleLine="true"
            android:autofillHints="password"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- material button is used to display the "Login" button to user-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="4dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="8dp"
            android:background="#e2e2e2" />

        <!-- text view to show the message
            "Don't have an account? Sign up-->
        <TextView
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:textColor="@color/purple"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="14sp" />






</RelativeLayout>
