<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridAddActivity"
    android:theme="@style/ToolbarTheme">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Weight"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <GridLayout
        android:id="@+id/gridLayoutInfo"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:layout_marginBottom="200dp"
        android:columnCount="2"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textViewWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="22dp"
            android:paddingEnd="8dp"
            android:text="Weight:"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="22dp"
            android:autofillHints="username"
            android:background="@drawable/background_edit_text"
            android:hint="@string/edit_text_weight"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="22dp"
            android:paddingEnd="8dp"
            android:text="Date:"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="22dp"
            android:autofillHints="username"
            android:background="@drawable/background_edit_text"
            android:hint="@string/edit_text_date"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="22dp"
            android:paddingEnd="8dp"
            android:text="ID:"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="22dp"
            android:autofillHints="username"
            android:background="@drawable/background_edit_text"
            android:hint="@string/edit_text_date"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/purple"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp"
            tools:ignore="VisualLintButtonSize" />



    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
